2017-01-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* samba/lib/tls/tls.c (tls_init_client): Remove superfluous call to
	deprecated gnutls_certificate_type_set_priority() as gnutls_set_default_priority()
	is already called. Fixes build with recent gnutls versions.

2016-12-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Use more appropriate package in 'apt-get' line.

2016-11-25  Michael Wiegand <michael.wiegand@greenbone.net>

	Streamline handling of version information.

	* CMakeLists.txt: Raise minimum required CMake version to 3.0 to make
	setting the project version with the PROJECT command available. Set
	project version using PROJECT command. Set project language properly.
	Check parent directory when setting SVN_EXECUTABLE, because since 1.7
	svn has a single .svn directory. Set project version independently of
	CPack configuration. Make switching between beta and stable version
	schemes easier. Use version string with possible SVN revision suffix
	for the CPack package version. Do not set LIBOPENVASCONFIG_VERSION and
	OPENVASLIB_VERSION since both are unused.

	* winexe/CMakeLists.txt: Set SOVERSION from PROJECT_VERSION_MAJOR
	instead of CPACK_PACKAGE_VERSION_MAJOR.

	* wmi/CMakeLists.txt: Set SOVERSION from PROJECT_VERSION_MAJOR
	instead of CPACK_PACKAGE_VERSION_MAJOR.

2016-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Updated version to 1.0.3.

2016-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-smb 1.0.2 release.

	* CHANGES: Updated.

2016-09-21  Christian Fischer <christian.fischer@greenbone.net>

	* samba/pidl/pidl (process_file): Removed deprecated
	defined call on array. Patch by Sebastien Aucouturier. 

2016-09-21  Christian Fischer <christian.fischer@greenbone.net>

	* INSTALL: Added missing install prerequisites on debian.

2016-06-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
